# monitoreoIOT-internet

./: .gitignore
docs/: README.md
docs/01-proyecto/: resumen.md
docs/02-protocolo/: especificacion-protocolo.md
sensor/: README.md  __init__.py  base_sensor.py  run_many.py  run_sensor.py
sensor/sensors/: __init__.py  humidity_sensor.py  power_sensor.py  pressure_sensor.py  temperature_sensor.py  vibration_sensor.py
server/: CMakeLists.txt  README.md
server/include/: logger.h  protocol.h  server.h
server/scripts/: compilar.sh  ejecutar.sh
server/src/: logger.cpp  main.cpp  protocol.cpp  server.cpp
